--- a/frontend/styles/shared-styles.css
+++ b/frontend/styles/shared-styles.css
@@ -1,3 +1,19 @@
+a[highlight] {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.header {
+  padding: 0 var(--lumo-space-m);
+}
+
+.header h1.logo {
+  font-size: 1em;
+  margin: var(--lumo-space-m);
+}
+
+
+/*List view*/
 .list-view .content {
   display: flex;
 }
@@ -16,4 +32,9 @@
   .list-view.editing .contact-grid {
     display: none;
   }
+}
+
+.dashboard-view .contact-stats {
+  font-size: 4em;
+  margin: 1em 0;
 }
